# KKT_1D_GTV

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Data/: data_generator.cpp  data_generator.hpp
KKT/: kkt.cpp  kkt.hpp  utils.hpp
Profiles/: comparison_profiles.hpp  comparison_profiles_util.cpp  huberProfile.cpp  l1l1Profile.cpp  l2l1nwProfile.cpp  l2l1wProfile.cpp  l2l2Profile.cpp  linearl2Profile.cpp  lplqProfile.cpp  pwl1Profile.cpp  pwl2Profile.cpp
